Css page overflow fixed

--- a/src/components/Forms/LoginSignUp/index.scss
+++ b/src/components/Forms/LoginSignUp/index.scss
@@ -1,9 +1,9 @@
 .form-container {
-  width: 100vw;
   display: flex;
-  height: 100vh;
   background-image: url('https://images.unsplash.com/photo-1526386172983-95d2ae8a88a6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80');
   background-size: cover;
+  height: calc(100vh - 80px);
+  width: 100vw;
   align-items: flex-start;
   justify-content: center;
   .form {
