--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 #root{
   box-sizing: border-box;
   & > div{
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
     min-width: 100vw;
     box-sizing: border-box;
