--- a/src/routes/Home/index.scss
+++ b/src/routes/Home/index.scss
@@ -1,5 +1,4 @@
 #mainContainer{
-  height: 80vh;
   .leaflet-container {
     width: 100%;
     height: 80vh;
